--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: "3.10"
 
       - name: Arukereso.py futtatása
-        run: python blob/main/.github/workflows/Arukereso.py
+        run: python .github/workflows/Arukereso.py
 
       - name: urls.txt commitolása
         run: |
