--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Könyvtárak telepítése
+        run: |
+          python -m pip install --upgrade pip
+          pip install selenium openpyxl requests
+
       - name: Arukereso.py futtatása
         run: python .github/workflows/Arukereso.py
 
