--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -18,6 +18,14 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Chrome és ChromeDriver telepítése
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+          wget -q -O - https://chromedriver.storage.googleapis.com/LATEST_RELEASE | xargs -I {} wget -q https://chromedriver.storage.googleapis.com/{}/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          
       - name: Könyvtárak telepítése
         run: |
           python -m pip install --upgrade pip
