--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,8 +1,8 @@
 name: Run Arukereso.py and save urls.txt
 
 on:
-  schedule:
-    - cron: "30 08 * * *"  # minden nap 15:30 magyar idő (14:30 UTC)
+  #schedule:
+   # - cron: "30 08 * * *"  # minden nap 15:30 magyar idő (14:30 UTC)
   workflow_dispatch:        # manuálisan is indítható
 
 jobs:
